# cso2-launcher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING  CSO2Launcher.sln  README.md  appveyor.yml  gengithash.ps1  setuplibs.ps1  start-cso2.bat  start-cso2.sh
.github/ISSUE_TEMPLATE/: bug_report.md
ci/: build.ps1  pack.ps1  setup.ps1
cmake_modules/: git-version.cmake  version.cmake
headers/: basedir.hpp  console.hpp  cso2_options.hpp  git-version.hpp  hooks.hpp  launcher.hpp  launcher_version.hpp.in  modulecache.hpp  modulelist.hpp  platform.hpp  sourceapp.hpp  stdafx.hpp  utilities.hpp  version.hpp
headers/buffer/: view.hpp
headers/hooks/engine/: custompacket.hpp
headers/hooks/lua/: lua_hooks.hpp
headers/msvc/: string.hpp
headers/source/: appsystemgroup.hpp  appsystemtable.hpp  filesystem_util.hpp  sourcesystem.hpp  tierlibs.hpp
headers/utilities/: PatternSearch.hpp  log.hpp  memorypatterns.hpp
launcher/: CMakeLists.txt  filesystem.cpp  launcher.vcxproj  launcher.vcxproj.filters
launcher/header/: basedir.hpp  console.hpp  git-version.hpp  githash.hpp  hooks.hpp  ifilesystem.hpp  leakdump.hpp  logallfiles.hpp  onloadlib.hpp  reslistgenerator.hpp  sourceapp.hpp  stdafx.hpp  tierextra.hpp  utilities.hpp  version.hpp
launcher/resource/: launcher.rc
launcher/source/: AppSystemGroup.cpp  WinApp.cpp  console.cpp  consolethread.cpp  filesystem_init.cpp  launcher.cpp  logallfiles.cpp  main.cpp  modulelist.cpp  reslistgenerator.cpp  sourceapp.cpp  tierextra.cpp
launcher/source/appframework/: AppSystemGroup.cpp  WinApp.cpp
launcher/source/hooks/: client.cpp  engine.cpp  filesystem.cpp  server.cpp  shaderapidx9.cpp  tier0.cpp  vgui2.cpp  winapi.cpp
launcher/source/imgui/: imgui.h  imgui_draw.cpp  imgui_widgets.cpp
launcher/source/tier1/: KeyValues.cpp  convar.cpp  interface.cpp  strtools.cpp  strtools_unicode.cpp  utlstring.cpp
minimal_sdk/common/gameui/: igameconsole.hpp
minimal_sdk/public/: icvar.hpp  ienginevgui.hpp  ihammer.hpp  istudiorender.hpp  vtf.hpp
minimal_sdk/public/appframework/: iappsystem.hpp  iappsystemgroup.hpp
minimal_sdk/public/bitmap/: imageformat.hpp
minimal_sdk/public/containers/: constructor_helpers.hpp  utlbuffer.hpp  utldict.hpp  utlmap.hpp  utlmemory.hpp  utlrbtree.hpp  utlstring.hpp  utlsymbol.hpp  utlvector.hpp
minimal_sdk/public/datacache/: idatacache.hpp  imdlcache.hpp
minimal_sdk/public/engine/: cdll_int.hpp  engineapi.hpp
minimal_sdk/public/filesystem/: filesystem.hpp  iqueuedloader.hpp
minimal_sdk/public/inputsystem/: AnalogCode.hpp  ButtonCode.hpp  InputEnums.hpp  iinputsystem.hpp
minimal_sdk/public/materialsystem/: imaterialsystem.hpp
minimal_sdk/public/math/: color.hpp  vector.hpp
minimal_sdk/public/scaleform/: cso2_gfxfile.hpp  sf_memoryheap.hpp
minimal_sdk/public/tier0/: dbg.hpp  icommandline.hpp  platform.hpp
minimal_sdk/public/tier1/: byteswap.hpp  convar.hpp  iconvar.hpp  ilocalize.hpp  interface.hpp
minimal_sdk/public/vgui/: ilocalize.hpp  isurface.hpp  ivgui.hpp  vguitypes.hpp
minimal_sdk/public/video/: ivideoservices.hpp
minimal_sdk/public/vphysics/: iphysics.hpp
prebuilt/libs/: nmcogame.def  nxgsm.def
prebuilt/libs/Win32/: nmcogame.exp  nmcogame.lib  nxgsm.exp  nxgsm.lib
resources/: launcher.rc  resource.hpp
sdk/engine/cso2/: clanbattle.h  claninfo.h  cso2automatchmodinfo.cpp  cso2automatchmodinfo.h  cso2gamemanager.cpp  cso2gamemanager.h  cso2gameroom.cpp  cso2gameroom.h  cso2mapinfo.cpp  cso2mapinfo.h  cso2modinfo.cpp  cso2modinfo.h  cso2modmapinfo.cpp  cso2modmapinfo.h  itemoptioninfo.h  optionlist.cpp  optionlist.h
sdk/lib/public/: libtier0.def  tier0.def  tier0.exp  tier0.lib  tier0_mingw_new.exp  tier0_msvc.exp
sdk/mathlib/: mathlib.vcxproj  mathlib.vcxproj.vpc_crc  quantize.cpp  sse.cpp  sseconst.cpp
sdk/public/: cdll_int.h  filesystem.h  filesystem_init.cpp  filesystem_passthru.h  minmax.h  studio.h
sdk/public/appframework/: AppFramework.h  IAppSystemGroup.h
sdk/public/bitmap/: imageformat.h
sdk/public/haptics/: haptic_utils.cpp
sdk/public/mathlib/: mathlib.h  ssemath.h
sdk/public/tier0/: ICommandLine.h  dbg.h  memalloc.h  memdbgon.h  platform.h  threadtools.h  valve_minmax_off.h  valve_minmax_on.h  wchartypes.h
sdk/public/tier1/: UtlSortVector.h  bitbuf.h  characterset.h  convar.h  iconvar.h  strtools.h  utlblockmemory.h  utlbuffer.h
sdk/vpc_scripts/: default.vgc  groups.vgc  projects.vgc  source_win32_base.vpc
sources/: console.cpp  cso2_options.cpp  exports.cpp  filesystem_init.cpp  launcher.cpp  main.cpp  modulecache.cpp  modulelist.cpp  sourceapp.cpp  sourcemain.cpp  tierextra.cpp  util.hpp
sources/appframework/: AppSystemGroup.cpp  WinApp.cpp
sources/buffer/: view.cpp
sources/hooks/: client.cpp  engine.cpp  filesystem.cpp  server.cpp  shaderapidx9.cpp  tier0.cpp  vgui2.cpp  winapi.cpp
sources/hooks/client/: scaleform_hooks.cpp
sources/hooks/engine/: custompacket.cpp  enginevgui.cpp  keyevents.cpp  msghandler.cpp
sources/hooks/filesystem/: cso2_filesystem_hooks.cpp
sources/hooks/lua/: lua_client_hooks.cpp  lua_hooks.cpp  lua_server_hooks.cpp
sources/imgui/: imgui.cpp  imgui_draw.cpp
sources/platform/: platform.cpp  platform_unix.cpp  platform_windows.cpp
sources/source/: appsystemgroup.cpp  appsystemtable.cpp  filesystem_util.cpp  sourcesystem.cpp  tierlibs.cpp
sources/tier1/: KeyValues.cpp  convar.cpp  interface.cpp  strtools.cpp  tier1.cpp  utlbuffer.cpp
sources/tier2/: tier2.cpp
sources/tier3/: tier3.cpp
sources/utilities/: PatternSearch.cpp  log.cpp  memorypatterns.cpp
src/: hooks.h  launcher.vcxproj  launcher.vcxproj.filters  main.cpp
src/hooks/: engine.cpp  server.cpp  tier0.cpp  vgui2.cpp  winapi.cpp
src/launcher/: consolethread.cpp  filesystem_init.cpp  hooks.h  ifilesystem.h  launcher.cpp  launcher.vcxproj  launcher.vcxproj.filters  modulelist.cpp  modulelist.h  onloadlib.h
src/launcher/hooks/: client.cpp  engine.cpp  tier0.cpp  vgui2.cpp  winapi.cpp
src/launcher_main/: launcher_main.rc  launcher_main.vcxproj  launcher_main.vcxproj.filters  main.cpp
(+15 files in other folders)
